--- a/views/index.haml
+++ b/views/index.haml
@@ -1,12 +1,14 @@
-%html
-  %head
-    %script(src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js")
-    :css
+%script(src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js")
+:css
 
-  %body
-    #chat
+#chat.clearfix
 
-
-    :javascript
-      var es = new EventSource('/stream');
-      es.onmessage = function(e) { console.log('whoa'); if (e.data != '') $('#chat').prepend(e.data + "<br/>") }; // modified
+:javascript
+  var es = new EventSource('/stream');
+  es.onmessage = function(e) {
+    if (e.data != ''){
+      data = jQuery.parseJSON(e.data)
+      $('#chat').append("<div class='message'><div class='username'>"+ data.username +"</div><div class='content'>"+ data.message +"</div>") ;
+      $("html, body").animate({ scrollTop: $(document).height() }, 0);
+    }
+  }
