--- a/views/index.haml
+++ b/views/index.haml
@@ -1,6 +1,9 @@
 %script(src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js")
 :css
-
+#sidebar
+  #inner
+    %h1 Fireplace
+    %h2 A simple chat client
 #chat.clearfix
 
 :javascript
