--- a/public/css/main.css
+++ b/public/css/main.css
@@ -128,6 +128,23 @@ h2 {
   box-shadow: 2px 2px 4px #999;
   padding: 15px;
   width: 700px;
+  margin-bottom: 120px;
+}
+
+#chat-input {
+  position: fixed;
+  bottom: 0px;
+  padding-bottom: 40px;
+  background-color: #e9e9e9;
+  width: 100%;
+  padding-top: 10px;
+}
+
+#chat-input textarea {
+  width: 650px;
+  height: 60px;
+  font-size: 12px;
+  resize: none;
 }
 
 .message {
