refactor a bit, and add announcement message types, with nice CSS

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -152,6 +152,14 @@ h2 {
   margin-bottom: 1px;
 }
 
+.announce {
+  background-color: #D9E7FB;
+}
+
+.announce .username{
+  background-color: #D9E7FB;
+}
+
 .username {
   display: inline-block;
   font-weight: bold;
